# is31fl3728-rs

./: .gitignore  Cargo.toml  README.md
examples/embedded-graphics/: Cargo.toml  Embed.toml  README.md  stm32f401.svd.patched
examples/embedded-graphics/.cargo/: config.toml
examples/embedded-graphics/media/: flash.aseprite  hello.aseprite  png2bmp.sh
examples/embedded-graphics/src/: main.rs
examples/stm32-f401RE/: Cargo.toml  README.md
examples/stm32-f401RE/src/: main.rs
src/: embedded_graphics_support.rs  lib.rs
